# face

./: README.md  create_csv.py
chinese/: CMakeCache.txt  CMakeLists.txt  CvxText.cpp  Makefile  chinese  cmake_install.cmake  main.cpp
facere/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  facere  facere.cpp
takephotos/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  takephotos  takephotos.cpp
test1/: CMakeCache.txt  CMakeLists.txt  Makefile  at.txt  cmake_install.cmake  train  train.cpp
